--- a/search.html
+++ b/search.html
@@ -8,8 +8,8 @@ layout: default
 <!--    <input type="text" id="search-box" name="query">-->
 <!--    <input type="submit" value="search">-->
 <!--</form>-->
-<div class="">
-    <ul id="search-results"></ul>
+<div class="uk-container uk-container-small uk-margin-medium-bottom" id="search_results">
+
 </div>
 <script>
     window.store = {
@@ -17,10 +17,11 @@ layout: default
     "{{ post.url | slugify }}": {
         "title": "{{ post.title | xml_escape }}",
         "author": "{{ post.author | xml_escape }}",
-        "category": "{{ post.category | xml_escape }}",
+        "categories": "{{ post.categories | xml_escape }}",
         "content": {{ post.content | strip_html | strip_newlines | jsonify }},
         "url": "{{ post.url | xml_escape }}",
-        "number": {{ post.number | jsonify }}
+        "number": {{ post.number | jsonify }},
+        "image": "{{ post.image }}"
     },
     {% endfor %}
     {% for book in site.bible %}
@@ -29,7 +30,8 @@ layout: default
         "type": "{{ book.type | xml_escape }}",
         "content": {{ post.content | strip_html | strip_newlines | jsonify}},
         "url": "{{ book.url | xml_escape }}",
-        "weight": {{ book.weight | jsonify}}
+        "weight": {{ book.weight | jsonify}},
+        "image": "{{ book.image_thumb }}"
     }{% unless forloop.last %},{% endunless %}
     {% endfor %}
     };
