fixed alot of homepage; added new Everyday Miracle Section, added new search section, bugfix mobile view

--- a/search.html
+++ b/search.html
@@ -8,6 +8,9 @@ layout: default
 <!--    <input type="text" id="search-box" name="query">-->
 <!--    <input type="submit" value="search">-->
 <!--</form>-->
+<div class="uk-margin-large-left">
+    <h1 id="results-title">Results:</h1>
+</div>
 <div class="uk-container uk-container-small uk-margin-medium-bottom" id="search_results">
 
 </div>
