--- a/search.html
+++ b/search.html
@@ -8,6 +8,9 @@ layout: default
 <!--    <input type="text" id="search-box" name="query">-->
 <!--    <input type="submit" value="search">-->
 <!--</form>-->
+
+<a href="#" uk-totop uk-scroll class="uk-position-fixed uk-position-bottom-right scrollup-button"></a>
+
 <div class="uk-margin-large-left">
     <h1 id="results-title">Results:</h1>
 </div>
